Modified: couldn't get display working, moved on to CSS

--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,10 @@ code {
 }
 
 .container {
-  max-width: 400px;
+  max-width: 500px;
   width: 100%;
   margin: 0 auto;
-  background: rgb(160, 25, 43);
+  background: rgb(175, 30, 57);
   padding: 30px 40px;
   border-radius: 10px;
 }
@@ -25,38 +25,47 @@ code {
 }
 
 .display {
-  background: rgb(44, 44, 44);
+  background: rgb(50, 51, 53);
   /* max-width: 500px; */
-  height: 60px;
+  height: 80px;
    margin: 20px 0px;
-   border-radius: 30px;
+   border-radius: 50px;
 }
 
 .App {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
 
 }
 
-.button-container{
-  width: 400px;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column-reverse;
-  justify-content: center;
-  align-content: center;
-}
-
 button{
   border-radius: 50px;
+  color: white;
+  border: none;
+  font-size: 30px;
   height: 80px;
   width: 80px;
   text-align: center;
   margin: 10px 20px;
 }
 
-.operator-buttons{
+.button-container{
+  width: 400px;
   display: flex;
+  flex-wrap: wrap;
+  
+}
 
+.number-buttons {
+  background: rgb(9,67, 119);
+}
 
+.special-buttons {
+  background: rgb(0,114,145)
+}
+
+.operator-buttons{
+  background: rgb(11,93,155);
+  
 }
