--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,11 @@ code {
 }
 
 .container {
-  max-width: 500px;
+  max-width: 380px;
   width: 100%;
-  margin: 0 auto;
+  margin: 70px auto;
   background: rgb(175, 30, 57);
-  padding: 30px 40px;
+  padding: 30px 30px;
   border-radius: 10px;
 }
 
@@ -32,40 +32,56 @@ code {
    border-radius: 50px;
 }
 
-.App {
+.button-container{
+  margin: 0 auto;
+  width: 380px;
   display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
   flex-wrap: wrap;
-  flex-direction: column;
-
+  
 }
-
 button{
   border-radius: 50px;
   color: white;
   border: none;
   font-size: 30px;
-  height: 80px;
-  width: 80px;
+  height: 73px;
+  width: 73px;
   text-align: center;
-  margin: 10px 20px;
-}
-
-.button-container{
-  width: 400px;
-  display: flex;
-  flex-wrap: wrap;
+  margin: 10px;
   
 }
+
+
+.right-column {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  width: 20%;
+}
+.left-column {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-evenly;
+  
+  width: 75%;
+}
+
 
 .number-buttons {
   background: rgb(9,67, 119);
 }
 
+.number-buttons:nth-child(10) {
+  width: 165px;
+}
+
 .special-buttons {
-  background: rgb(0,114,145)
+  background: rgb(11,93,155);
 }
 
 .operator-buttons{
-  background: rgb(11,93,155);
+  background: rgb(0,114,145);
   
 }
