--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@ button{
   border-radius: 50px;
   color: white;
   border: none;
+  box-shadow: 0px 4px 0px 0px rgba(0,0,0,0.60);
   font-size: 30px;
   height: 73px;
   width: 73px;
